# sentiric-sip-sbc-service

./: Cargo.toml
src/: app.rs  telemetry.rs
src/rtp/: engine.rs
src/sip/: server.rs
src/sip/handlers/: media.rs
