# Dosya: Cargo.toml
[package]
name = "sentiric-sip-sbc-service"
version = "1.5.15"
edition = "2021"

[dependencies]
# Async & Network
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.11", features = ["tls", "tls-roots"] }
prost = "0.12"
hyper = { version = "0.14", features = ["full"] }

# Observability (GÜNCELLENDİ)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }
tracing-appender = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
hostname = "0.3" # Hostname tespiti için eklendi

# Config & Utils
dotenvy = "0.15"
anyhow = "1.0"
thiserror = "1.0"
config = "0.14"
rand = "0.8"
dashmap = "5.5"
governor = "0.6"
nonzero_ext = "0.3"

# --- STRING PROCESSING ---
regex = "1"

# --- THE IRON CORE (STANDARD v2.0) ---
sentiric-rtp-core = { git = "https://github.com/sentiric/sentiric-rtp-core.git", tag = "v1.6.1" }
sentiric-sip-core = { git = "https://github.com/sentiric/sentiric-sip-core.git", tag = "v1.5.6" }
sentiric-contracts = { git = "https://github.com/sentiric/sentiric-contracts.git", tag = "v1.17.0" }